Added restricted accounts

--- a/style/style.css
+++ b/style/style.css
@@ -96,6 +96,11 @@
       animation: float 3s infinite ease-in-out;
     }
 
+    main
+    {
+      width: 80%;
+      margin: auto;
+    }
     @keyframes float {
       0%, 100% { transform: translateY(0); }
       50% { transform: translateY(-10px); }
