--- a/style/commentaire.css
+++ b/style/commentaire.css
@@ -31,7 +31,7 @@ body {
     transition: all 0.3s ease;
     box-shadow: 0 5px 15px rgba(255, 139, 171, 0.3);
 }
-form
+.search-container form
 {
   display: flex;
   flex-direction: row;
